allprojects {
    apply plugin: 'maven'
    group = 'vip.wuweijie.wheel'
    version = '0.0.1-SNAPSHOT'
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'idea'

    sourceCompatibility = 1.11

    repositories {
        mavenLocal()
        mavenCentral()
    }

    dependencies {
//    compile fileTree(dir: System.getenv("JAVA_HOME") + '/lib/tools.jar')
        testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.5.2'
    }

    uploadArchives {
        repositories {
            def localRepositoryPath = 'file://' + new File(System.getProperty('user.home'), '.m2/repository').absolutePath
            mavenDeployer {
                repository(url: localRepositoryPath)
                pom.project {
                    name = project.name
                    version = project.version
                    groupId = project.group
                }
            }
        }
    }
    compileJava {
        def args = [
                '--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
                '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
                '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
                '--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
                '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
        ]
        options.getCompilerArgs().addAll(args)
        println options.getCompilerArgs()
    }

}